--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,6 @@ Thumbs.db
 
 # track these mu-plugins, plugins, and themes
 # add your own entries here
-!wp-content/mu-plugins/example-mu-plugin/
-!wp-content/plugins/example-plugin/
-!wp-content/themes/example-theme/
+# !wp-content/mu-plugins/example-mu-plugin/
+# !wp-content/plugins/example-plugin/
+!wp-content/themes/fipradotcom/
