--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ sitemap.xml
 sitemap.xml.gz
 
 wp-content/themes/fipradotcom/js
+wp-content/themes/fipradotcom/vcards
 
 desktop.ini
 node_modules/
